fix image height on mobile

--- a/apps/portfolio/src/components/Header/Header.module.scss
+++ b/apps/portfolio/src/components/Header/Header.module.scss
@@ -104,6 +104,11 @@
   @media only screen and (max-width: 1024px) {
     max-width: 130px;
     margin-bottom: 25px;
+
+    & img {
+      width: 130px;
+      height: 130px;
+    }
   }
 }
 
